@@ -5,6 +5,8 @@ Version 1.10.4+svn:
  * Language and i18n:
    * Updated translations: Chinese (Traditional), Croatian, French, Italian,
      Slovak
+ * WML engine:
+   * Image path functions again evaluated left-to-right. Fixes bug #20196.
  * Miscellaneous and bug fixes:
    * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
 
